// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":false,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":false,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":false,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":null,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":null,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":true,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":true,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"isInstalling":true,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":false,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":false,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":false,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":null,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":null,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":true,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":true,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":false,"isInstalling":true,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":false,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":false,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":false,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":null,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":null,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":true,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":true,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":null,"isInstalling":true,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":false,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":false,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":false,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":null,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":null,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":true,"installingOn":"https://deepsource.io/example.png","integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <div class=\\"flex justify-center\\">
      <notice-stub class=\\"h-8 gap-x-3\\">
        <p class=\\"text-xs\\">
          Installing on
          <span class=\\"font-medium text-vanilla-100\\">https://deepsource.io/example.png</span></p>
      </notice-stub>
    </div>
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":true,"installingOn":null,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`[[ IntegrationCallbackWrapper ]] renders the integration callback wrapper: {"primaryDisabled":true,"isInstalling":true,"integrationLogo":"https://deepsource.io/example.png"} 1`] = `
"<div class=\\"flex animate-glow-bg justify-center pt-26\\">
  <div class=\\"max-w-2xl space-y-6 rounded-md border border-slate-400 bg-ink-400 pb-4 pt-6\\">
    <div class=\\"flex items-center justify-center gap-x-2\\">
      <div class=\\"rounded-sm bg-ink-300 p-1.5 pr-1\\"><img src=\\"~/assets/images/deepsource-logo-centered.svg\\" alt=\\"DeepSource\\" class=\\"h-8 w-8 flex-shrink-0\\"></div>
      <z-icon icon=\\"arrow-left-right\\"></z-icon>
      <logocontainer-stub logo=\\"https://deepsource.io/example.png\\" dimensions=\\"w-8 h-8\\"></logocontainer-stub>
    </div>
    <!---->
    <div class=\\"px-6\\"></div>
    <z-divider></z-divider>
    <div class=\\"grid px-6 pb-px\\">
      <zbutton-stub is-loading=\\"true\\" disabled=\\"true\\" label=\\"Install integration\\" loading-label=\\"Installing integration\\" icon=\\"play-circle\\" size=\\"small\\" class=\\"mb-2.5 w-44 place-self-end\\"></zbutton-stub>
    </div>
  </div>
</div>"
`;
